--- a/src/StreamQuest.Silo/StreamQuest.Silo.csproj
+++ b/src/StreamQuest.Silo/StreamQuest.Silo.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Orleans.Server" Version="3.6.4" />
+  </ItemGroup>
+
 </Project>
