--- a/src/StreamQuest.Client/StreamQuest.Client.csproj
+++ b/src/StreamQuest.Client/StreamQuest.Client.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Spectre.Console.ImageSharp" Version="0.44.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StreamQuest.Shared\StreamQuest.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
