--- a/src/StreamQuest.Shared/StreamQuest.Shared.csproj
+++ b/src/StreamQuest.Shared/StreamQuest.Shared.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="3.6.4" />
+  </ItemGroup>
+
 </Project>
