--- a/src/StreamQuest.Silo/StreamQuest.Silo.csproj
+++ b/src/StreamQuest.Silo/StreamQuest.Silo.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.Orleans.Server" Version="3.6.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StreamQuest.Shared\StreamQuest.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
